Payment Initialization done

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
 MONGODB_URL_LOCAL=mongodb://localhost:27017/mycommerce
 
+MONGODB_SERVER=mongodb+srv://iqbal155128:<PASSWORD>@cluster0.mxhji.mongodb.net/mycommerce?retryWrites=true&w=majority&appName=Cluster0
+
+
 NODE_ENV=development
 
 PORT=3001
 
 JWT_SECRET_KEY=JWT_SECRET_KEY
+
+DB_PASSWORD=aUBdXt40hyiJY2cb
+
+SSLCOMMERZ_STORE_ID=abc66acc1df3dc49
+SSLCOMMERZ_STORE_PASSWORD=abc66acc1df3dc49@ssl
