--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
+
+
+
 {
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "20.11.0"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
